--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             >NeuraLife AI Market</a
           >
         </li>
+        <li>
+          <a href="/personalprojects/amazonsde1prep/">Amazon SDE-1 Prep</a>
+        </li>
         <!-- Add a link for your 'upgrade-agent' app here when it's ready -->
         <!-- <li><a href="/personalprojects/upgrade-agent/">Upgrade Agent</a></li> -->
       </ul>
